eycart-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eycart-deploy
  namespace: kgateway-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eycart
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: eycart
    spec:
      containers:
        - name: eycart-cont
          image: muralisocial123/ey-cart:v1.1.0
          ports:
            - containerPort: 3000
          resources:
            requests: 
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---

apiVersion: v1
kind: Service
metadata:
  name: eycart-svc
  namespace: kgateway-ns
spec:
  selector:
    app: eycart
  ports:
    - port: 3002
      targetPort: 3000
  type: ClusterIP
