fitness-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-deploy
  namespace: kgateway-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fitness
  stratergy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: fitness
    spec:
      containers:
        - name: fitness-cont
          image: muralisocial123/fitness-app:v1.0.1
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---

apiVersion: v1
kind: Service
metadata:
  name: fitness-svc
  namespace: kgateway-ns
spec:
  selector:
    app: fitness
  ports:
    - port: 5001
      targetPort: 5000
  type: ClusterIP
