flipkart-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flipkart-deploy
  namespace: kgateway-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flipkart
  stratergy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: flipkart
    spec:
      containers:
        - name: flipkart-cont
          image: muralisocial123/flipkart-clone-kuberox:v1.1.0
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---

apiVersion: v1
kind: Service
metadata:
  name: flipkart-svc
  namespace: kgateway-ns
spec:
  selector:
    app: flipkart
  ports:
    - port: 81
      targetPort: 80
  type: ClusterIP
