flower-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower-deploy
  namespace: kgateway-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flower
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: flower
    spec:
      containers:
        - name: flower-cont
          image: muralisocial123/kyndrl-flower-app:v1.1.0
          ports:
            - containerPort: 3015
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---

apiVersion: v1
kind: Service
metadata:
  name: flower-svc
  namespace: kgateway-ns
spec:
  selector:
    app: flower
  ports:
    - port: 3016
      targetPort: 3015
  type: ClusterIP
