transaction-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-deploy
  namespace: kgateway-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction
  stratergy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: transaction
    spec:
      containers:
        - name: transaction-cont
          image: muralisocial123/transaction-app:v1.0.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---

apiVersion: v1
kind: Service
metadata:
  name: transaction-svc
  namespace: kgateway-ns
spec:
  selector:
    app: transaction
  ports:
    - port: 3001
      targetPort: 3000
  type: ClusterIP
